k8s/restaurant-solidaire-api/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    system : ${SYSTEM_NAME}
    component: ${COMPONENT_NAME}
    identifier : ${COMPONENT_NAME}-${SYSTEM_VERSION}
  name: ${COMPONENT_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  type: ${K8S_SERVICE_TYPE}
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    system : ${SYSTEM_NAME}
    component: ${COMPONENT_NAME}
    identifier : ${COMPONENT_NAME}-${SYSTEM_VERSION}
